# wisp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  justfile
include/wisp/: Test.hpp
include/wisp/common/: Dimensions.hpp  Flex.hpp
include/wisp/core/: Component.hpp  Window.hpp
include/wisp/core/flex/: Flex.hpp  FlexAlignment.hpp  FlexDirection.hpp  FlexJustification.hpp  FlexLine.hpp
include/wisp/core/managers/: CursorManager.hpp  EventDispatcher.hpp  TransitionManager.hpp  UIManager.hpp
include/wisp/events/: EventHandler.hpp  Events.hpp
include/wisp/transitions/: PropertyTransition.hpp  Transition.hpp
include/wisp/ui/: Box.hpp  Button.hpp  VertexShapes.hpp
include/wisp/utils/: ColorUtils.hpp  EventUtils.hpp  PositionUtils.hpp  StringUtils.hpp  TransitionUtils.hpp
src/: main.cpp
src/config/: LayoutConfig.hpp
src/core/: Component.cpp  Window.cpp
src/core/flex/: FlexJustification.cpp
src/core/managers/: CursorManager.cpp  EventDispatcher.cpp  TransitionManager.cpp  UIManager.cpp
src/transitions/: PropertyTransition.cpp
src/ui/: Box.cpp  Button.cpp  VertexShapes.cpp
